--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <link rel="stylesheet" href="./style.css">
     <!-- Don't forget to link your CSS file! -->
+    <style>
+
+    </style>
   </head>
   <body>
     <header>
@@ -34,7 +38,7 @@
           @fakeRealty
         </p>
       </div>
-      
+
       <div>
         <h3>Correspondence</h3>
         <p>
