--- a/index.html
+++ b/index.html
@@ -3,7 +3,38 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
-    <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css">
+    <style>
+        header{
+            text-align: center;
+        }
+        #featured-property > figure > img{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        nav a{
+            padding: 10px;
+            background-color: grey;
+        }
+        #featured-property > figure > figcaption{
+            font-size: 15px;
+            text-align: center;
+        }
+        #featured-property p{
+            width: 800px;
+            justify-items: center;
+        }
+        #details {
+            display: block;
+        }
+        #details div{
+            float: left;
+            background-color: darkgoldenrod;
+            text-align: center;
+            width: 25%;
+        }
+    </style>
   </head>
   <body>
     <header>
@@ -34,7 +65,7 @@
           @fakeRealty
         </p>
       </div>
-      
+
       <div>
         <h3>Correspondence</h3>
         <p>
